// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addUniqueId adds a deterministic unique ID to tokens 1`] = `
Array [
  Object {
    "address": "0x0000000000000000000000000000000000000000",
    "decimal": 18,
    "symbol": "FOO",
    "uuid": "4827be76-e454-5026-9eae-6536f8167eb5",
  },
  Object {
    "address": "0x0000000000000000000000000000000000000001",
    "decimal": 18,
    "symbol": "BAR",
    "uuid": "4ba5fa41-589f-5342-90c9-8c6de2274865",
  },
  Object {
    "address": "0x0000000000000000000000000000000000000002",
    "decimal": 18,
    "symbol": "BAZ",
    "uuid": "6ad241ef-989d-5526-ba6d-b5bab8e16468",
  },
  Object {
    "address": "0x0000000000000000000000000000000000000003",
    "decimal": 18,
    "symbol": "QUX",
    "uuid": "b1f33eef-0661-5c7c-bf6a-13ffbcc8fb71",
  },
]
`;

exports[`addUniqueId adds a deterministic unique ID to tokens 2`] = `
Array [
  Object {
    "address": "0x0000000000000000000000000000000000000000",
    "decimal": 18,
    "symbol": "FOO",
    "uuid": "d63ce22d-c95d-5d1f-b634-aa567c9ca29c",
  },
  Object {
    "address": "0x0000000000000000000000000000000000000001",
    "decimal": 18,
    "symbol": "BAR",
    "uuid": "06c40d60-ade4-5263-960b-edbda0d425b7",
  },
  Object {
    "address": "0x0000000000000000000000000000000000000002",
    "decimal": 18,
    "symbol": "BAZ",
    "uuid": "b8900910-916f-5a9c-ace5-fe8525357834",
  },
  Object {
    "address": "0x0000000000000000000000000000000000000003",
    "decimal": 18,
    "symbol": "QUX",
    "uuid": "cce450ec-dcfd-506d-a2d1-541d1082f200",
  },
]
`;
